<resources>
    <string name="app_name">RandoPlaner</string>
    <string name="welcome_1">RandoPlaner</string>
    <string name="welcome_2">Bienvenue sur RandoPlaner !</string>
    <string name="welcome_3">Simplifiez vos évenements en montagne grâce à RandoPlaner</string>
    <string name="welcome_4">Envie d\'une randonnée ?</string>
    <string name="welcome_5">Créez un nouvel évenement dès maintenant !</string>
    <string name="login1">Login :</string>
    <string name="login2">Login</string>
    <string name="password1">Password :</string>
    <string name="password2">Password</string>
    <string name="authenticate">Authenticate</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_landscape">Landscape</string>
    <string name="bottom_navigation_menu_logos">Logo</string>
    <string name="bottom_navigation_menu_android">Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FOR TOKEN -->
    <string name="FCM_PREF">e.g.dairien.android_project.fcm_pref</string>
    <string name="FCM_PTOKEN">e.g.dairien.android_project.fcm_token</string>

    <!-- CREATE FRAGMENT -->
    <string name="Titre">Titre</string>
    <string name="Lieu">Lieu</string>
    <string name="title_activity_maps">Map</string>

</resources>
